Expand on websocket-config approach
- Workers request config at startup
- Updates to config via dashboard alert worker to config change
- Config updates do not result in duplicate values in worker App config

--- a/ci/ansible/templates/systemd-service.j2
+++ b/ci/ansible/templates/systemd-service.j2
@@ -9,8 +9,9 @@ StandardOutput=inherit
 StandardError=inherit
 Restart=always
 User={{ service_user }}
-Environment=DATABASE_URL={{ dburl | default("")}}
-Environment=NODE_ENV={{ node_env | default("")}}
+Environment=DATABASE_URL={{ dburl | default("") }}
+Environment=NODE_ENV={{ node_env | default("") }}
+Environment=WS_URL={{ ws_url | default("") }}
 
 [Install]
 WantedBy=multi-user.target
