--- a/src/client/assets/main.scss
+++ b/src/client/assets/main.scss
@@ -11,7 +11,7 @@ body {
     background-color: #2d2d2d;
 }
 
-.box, .button, .navbar, .navbar-burger, .navbar-menu, .table, .table thead th {
+.box, .button, .card, .label, .navbar, .navbar-burger, .navbar-menu, .table, .table thead th, .tags, .tag {
     background-color: #3d3d3d;
     color: #fdfdfd;
 }
